--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -1,8 +1,7 @@
 <div id="home">
     <p class="background-title title">Background</p>
     <p class="background-body desc">
-        My passion for web development started at the core, the languages that drive it.
-        Now, I find myself fully immersed in the world of development striving to create
+        My passion for web development started with the idea of learning languages that are both abstract and foreign, only to build a product that are both palpable and beautiful. Now, I find myself fully immersed in the world of development striving to create
         simple and creative applications that can improve our day to day tasks.
     </p>
     <hr />
