fixed persisting canvas animations across pages

--- a/app/partials/home.html
+++ b/app/partials/home.html
@@ -10,7 +10,7 @@
         <div id="site" class="project desc" ng-mouseover="showInfo('one', true)" ng-mouseleave="showInfo('one', false)">
             Portfolio Website
             <p class="meta" ng-show="projects.one">
-                Changed technology stack to AngularJS and revamped UI. Will add canvas and D3 components.
+                Changed technology stack to AngularJS and revamped UI. Added canvas components.
             </p>
         </div>
         <div id="todo" class="project desc" ng-mouseover="showInfo('two', true)" ng-mouseleave="showInfo('two', false)">
