--- a/app/partials/about.html
+++ b/app/partials/about.html
@@ -11,7 +11,7 @@
 			<p><strong>7.</strong> I love my mom's spaghetti.</p>
 			<p><strong>8.</strong> I didn't know what I wanted to do until 28.</p>
 			<p><strong>9.</strong> I cannot go longer than 2 days without meat.</p>
-			<p><strong>10.</strong> I lvoe to exercise though my body doesn't show that.</p>
+			<p><strong>10.</strong> I love to exercise though my body doesn't show that.</p>
 		</div>
 	</div>
 	<hr />
@@ -23,22 +23,23 @@
 		<div class="company one">
 			<p class="title">GE Software</p>
 			<p class="desc">
-				...gave me the first opportunity to develop a consumer facing enterprise application, which tremendously helped me improve fom a junior fron-end to the developer I am today.
+				...gave me the first opportunity to develop a consumer facing enterprise application, which tremendously helped me improve from a junior front-end to the developer I am today.
 			</p>
 		</div>
 		<div class="company two">
 			<p class="title">Google</p>
 			<p class="desc">
-				...provided me tools and flexibility to learn a variety of languages and technologies in my path to become a web development ninja.\n\n
-				...also introduced me to the game of ping pong.\n\n...freed food
+				...provided me tools and flexibility to learn a variety of languages and technologies in my path to become a web development ninja.
+				...also introduced me to the game of ping pong.
+				...free food
 				...need I say more?
 			</p>
 		</div>
 		<div class="company three">
 			<p class="title">Cisco Systems</p>
 			<p class="desc">
-				...provided the first opportunity to develop my very first web application\n\n
-				...really introduced me to to web development and the begininning of my inevitable passion and insatiable hunger to build web applications.
+				...provided the opportunity to build my very first web application
+				...really introduced me to web dev and the begininning of my inevitable passion and insatiable hunger to build applications.
 			</p>
 		</div>
 	</div>
