updated background info

--- a/app/static/partials/home.html
+++ b/app/static/partials/home.html
@@ -1,7 +1,7 @@
 <div id="home">
     <p class="background-title title">Background</p>
     <p class="background-body desc">
-        My passion for web development started with the idea of learning languages that are both abstract and foreign, only to build a product that are both palpable and beautiful. Now, I find myself fully immersed in the world of development striving to create
+        My passion for web development started with the idea of learning languages that are both abstract and foreign and translating them into a intuitive and usable product. Now, I find myself fully immersed in the world of development striving to create
         simple and creative applications that can improve our day to day tasks.
     </p>
     <hr />
