fixed nav headers css issues; moved duplicate code from controllers to a service; updated resume

--- a/app/static/partials/resume.html
+++ b/app/static/partials/resume.html
@@ -1,42 +1,49 @@
-<div id="resume">
-	<article class="technologies">
+<article id="resume">
+	<section class="technologies">
 		<span class="title">TECHNOLOGIES</span>
 		<hr />
 		<ul class="languages desc">
-			<li>Angular.js, JavaScript, jQuery, Underscore.js, lodash, HTML5, CSS3, Sass, Bootstrap, Yeoman, Bower, Grunt, Python, Git, Vi, Highcharts</li>
-			<li><span class="past-exp set-green">PRIOR EXPERIENCE: </span>Node.js, Express.js, Mustache.js, Knockout.js, Jade, Flask, Django, Pygame, C, C++, Shell Scripting, mySQL, MongoDB, Mongoskin</li>
+			<li>Angular.js, JavaScript, jQuery, Underscore.js, lodash, HTML5, CSS3, Sass, Bootstrap, Yeoman, Bower, Grunt, Python, Flask, Highcharts, Canvas, Git, Vi </li>
+			<li><span class="past-exp set-green">PRIOR EXPERIENCE: </span>Node.js, Express.js, Mustache.js, Knockout.js, Jade, Django, Pygame, C, C++, Shell Scripting, mySQL, MongoDB, Mongoskin</li>
 		</ul>
-	</article>
-	<div class="experience">
+	</section>
+	<section class="experience">
 		<span class="title">WORK EXPERIENCE</span>
 		<hr />
-		<section class="ge job desc">
+		<div class="shutterfly job desc">
+			<div class="role">FRONT-END DEVELOPER</div>
+			<div class="company">Shutterfly, June 2015 - Present</div>
+			<ul class="tasks">
+				<li>Build a web UI that provides an 'at a glance' view of health dashboards across various servers; create a centralized reporting system to focus on identifying system/server issues and respond efficiently.</li>				
+			</ul>
+		</div>
+		<div class="ge job desc">
 			<div class="role">FRONT-END DEVELOPER</div>
 			<div class="company">GE Software, September 2014 - June 2015</div>
 			<ul class="tasks">
 				<li>Develop a diagnostics and monitoring web interface that provides interactive data visualizations of real time performance, which can save $150M+ annually due to oil & gas equipment repair and unplanned downtime.</li>
 				<li>Create extensible and reusable widgets that can scale with growth and across different business needs.</li>
-				<li>Implement an email-like case management application for users to interact, identify, and predict machine behaviors that can prolong its life and increase revenue by $7M/week.   </li>
+				<li>Implement an email-like case management application for users to interact, identify, and predict machine behaviors which can prolong its life and increase revenue by $7M/week.   </li>
 			</ul>
-		</section>
-		<section class="google job desc">
+		</div>
+		<div class="google job desc">
 			<div class="role">TECHNICAL OPERATIONS LEAD</div>
 			<div class="company">Google via Adecco, October 2012 - August 2014</div>
 			<ul class="tasks">
 				<li>Created an automation data-mining tool to upload 1500+ legacy data into existing site management tools to increase operator productivity by 50%.</li>
 				<li> Performed pose analysis on over 10,000 panoramic image data, geometry debug, and communicate with various teams ranging from 10-20 operators and project managers per location worldwide.</li>
 			</ul>
-		</section>
-		<section class="cisco job desc">
+		</div>
+		<div class="cisco job desc">
 			<div class="role">SOFTWARE ENGINEER INTERN</div>
 			<div class="company">Cisco Systems, June 2011 - July 2012</div>
 			<ul class="tasks">
 				<li>Implemented 65% of “Design Tracker” interactive web automation tool currently in use by a team of 20-30 engineers and project managers to track equipment development status valued at $100k+.</li>
 				<li>Designed a status web tool to record individual work updates and generate status reports to increase project updates visibility across 2-5 teams.</li>
 			</ul>
-		</section>
-	</div>
-	<div class="education">
+		</div>
+	</section>
+	<section class="education">
 		<span class="title">EDUCATION</span>
 		<hr />
 		<div class="masters degree desc">
@@ -52,10 +59,10 @@
 			<span class="set-green">Relevant Coursework: </span>
 			Object Oriented Programming, Database, Data Structures & Algorithms, Operating Systems, Computer Networking Concepts, TCP/IP Socket Programming, Computer Architecture
 		</div>
-	</div>
+	</section>
 	<div class="more-info pointer">
         <div class="desc">
             <a class="resume-button" href="../images/Alouise Quiatchon.docx" download="AlouiseQuiatchon.docx">Download Resume</a>
         </div>
     </div>
-</div> 
+</article> 
