adding projects to projects page

--- a/app/static/partials/projects.html
+++ b/app/static/partials/projects.html
@@ -1,3 +1,17 @@
 <div id="projects">
     <p class="title">STAY TUNED FOR MORE PROJECTS...</p>
+
+    <article id="todos" class="project">
+        <span class="snapshot">
+            <img src="images/todosKO.png" width="45%" />
+        </span>
+        <div class="desc">
+            <p class="detail">
+                A simple to dos application with full CRUD (create, read, update, delete) capability. It also features a drop and drag mechanism. Views are split into two: daily tasks and project tasks. Another feature is added (not complete) similar to a game leveling system where points increase in a given category based on matching texts. This provides a simple but great way to motivate oneself to complete their tasks.
+            </p>
+            <div class="tools">
+                Tools: Knockout.js, HTML, CSS, jQuery, node.js, MongoDB
+            </div>
+        </div>
+    </article>
 </div> 
