updated home page projects; updated projects page

--- a/app/static/partials/home.html
+++ b/app/static/partials/home.html
@@ -10,19 +10,19 @@
         <div id="site" class="project desc" ng-mouseover="showInfo('one', true)" ng-mouseleave="showInfo('one', false)">
             Portfolio Website
             <p class="meta" ng-show="projects.one">
-                Changed technology stack to AngularJS and revamped UI. Added canvas components.
+                Changed previous website's technology stack to the AngularJS framework and revamped UI. Added HTML5 Canvas components on the home page. 
             </p>
         </div>
-        <div id="todo" class="project desc" ng-mouseover="showInfo('two', true)" ng-mouseleave="showInfo('two', false)">
-            To Do App
+        <div id="vacation-charts" class="project desc" ng-mouseover="showInfo('two', true)" ng-mouseleave="showInfo('two', false)">
+            Vacation Charts
             <p class="meta" ng-show="projects.two">
-                Add, read, update, and delete daily tasks with leveling capability. UI powered by Knockout.js and backend with node.js and MongoDB.
+                Single Page Application that create, display, update, and delete vacation charts. UI powered by Angular and Javascript. REST API written in Python and Flask.
             </p>
         </div>
-        <div id="space-duel" class="project desc" ng-mouseover="showInfo('three', true)" ng-mouseleave="showInfo('three', false)">
-            Python Game: Space Duel
+        <div id="connect-four" class="project desc" ng-mouseover="showInfo('three', true)" ng-mouseleave="showInfo('three', false)">
+            Connect Four
             <p class="meta"  ng-show="projects.three">
-                2d battle game with 1-2 player mode. Lose when health is 0 or you fall off the planet. Powered by Python and Pygame.
+                Connect Four web game. Interactive game written only in Javascript and jQuery.
             </p>
         </div>
         <div class="projects-button">
