--- a/app/static/partials/projects.html
+++ b/app/static/partials/projects.html
@@ -15,7 +15,7 @@
                 <span class="github-link"><a href="{{projects.newSite.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: AngularJS, Require.js, HTML5, Canvas, CSS3, jQuery, Grunt, Bower, Yeoman, Python, Flask, Gunicorn
+                Tools: Javascript, AngularJS, Require.js, HTML5, Canvas, CSS3, jQuery, Grunt, Bower, Yeoman, Python, Flask, Gunicorn
             </div>
         </div>
     </article>
@@ -36,7 +36,7 @@
                 <span class="github-link"><a href="{{projects.vacationCharts.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: AngularJS, Require.js, HTML5, CSS3, jQuery, Lodash, Grunt, Bower, Yeoman, Python, Flask, Gunicorn
+                Tools: Javascript, AngularJS, Require.js, HTML5, CSS3, jQuery, Lodash, Grunt, Bower, Yeoman, Python, Flask, Gunicorn
             </div>
         </div>
     </article>
@@ -91,7 +91,7 @@
                 <span class="github-link"><a href="{{projects.todos.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: Knockout.js, HTML, CSS, jQuery, Grunt, Bower, Yeoman, Node.js, Express.js, MongoDB, Mongoskin, Require.js
+                Tools: Javascript, Knockout.js, HTML, CSS, jQuery, Grunt, Bower, Yeoman, Node.js, Express.js, MongoDB, Mongoskin, Require.js
             </div>
         </div>
     </article>
@@ -112,7 +112,7 @@
                 <span class="github-link"><a href="{{projects.oldSite.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: Knockout.js, HTML, Jade, CSS, jQuery, Grunt, Bower, Yeoman, Node.js, Express.js
+                Tools: Javascript, Knockout.js, HTML, Jade, CSS, jQuery, Grunt, Bower, Yeoman, Node.js, Express.js
             </div>
         </div>
     </article>
@@ -130,7 +130,7 @@
                 <span class="github-link"><a href="{{projects.spaceDuelGame.github}}" target="_blank">Fork me</a></span>
             </p>
             <div class="tools">
-                Tools: Knockout.js, HTML, Jade, CSS, jQuery, Grunt, Bower, Yeoman, Node.js, Express.js
+                Tools: Python, Pygame
             </div>
         </div>
     </article>
