--- a/app/static/partials/resume.html
+++ b/app/static/partials/resume.html
@@ -18,7 +18,7 @@
 			</ul>
 		</div>
 		<div class="ge job desc">
-			<div class="role">FRONT-END DEVELOPER</div>
+			<div class="role">UI ENGINEER</div>
 			<div class="company">GE Software, September 2014 - June 2015</div>
 			<ul class="tasks">
 				<li>Develop a diagnostics and monitoring web interface that provides interactive data visualizations of real time performance, which can save $150M+ annually due to oil & gas equipment repair and unplanned downtime.</li>
